Revert "added desc for the bar chart"

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -10,7 +10,7 @@
     "### Group 64:\n",
     "- **Lukas Rasocha** (s233498)\n",
     "- **NAME** (s174398)\n",
-    "- **Md Jahidul Islam** (s240010)"
+    "- **NAME** (s174394)"
    ]
   },
   {
@@ -39,24 +39,14 @@
    "metadata": {},
    "source": [
     "## 1. Motivation.\n",
-    "- **What is your dataset?**\n",
+    "- What is your dataset?\n",
     "\n",
     "This dataset contains all political violence events, demonstration events, and strategic developments recorded in Ukraine and the Black Sea from the beginning of ACLED coverage in 2018 to the present.\n",
     "\n",
     "\n",
     "\n",
-    "- **Why did you choose this/these particular dataset(s)?**\n",
-    "\n",
-    "We chose this dataset for its relevance, timeliness, richness of data, and potential for insightful analysis. The ongoing conflict between Ukraine and Russia holds significant geopolitical implications, making it crucial to understand the dynamics of political violence and activism in this region. The dataset's coverage from 2018 to the present ensures that it captures recent events, offering up-to-date insights into the situation. Additionally, the dataset provides comprehensive information on location, date, fatalities, events with detailed analysis of various aspects of the conflict.\n",
-    "\n",
-    "\n",
-    "\n",
-    "- **What was your goal for the end user's experience?**\n",
-    "\n",
-    "Our goal for the end user's experience is to provide a comprehensive understanding of political violence and demonstration events in Ukraine and the Black Sea region. Through interactive visualizations and informative analysis, we aim to enable users to explore and interpret the data, gaining insights into the conflict's dynamics. Ultimately, we aim to contribute to informed decision-making and discourse surrounding the Ukraine-Russia conflict.\n",
-    "\n",
-    "\n",
-    "\n"
+    "- Why did you choose this/these particular dataset(s)?\n",
+    "- What was your goal for the end user's experience?"
    ]
   },
   {
