--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -46,7 +46,14 @@
     "\n",
     "\n",
     "- Why did you choose this/these particular dataset(s)?\n",
-    "- What was your goal for the end user's experience?"
+    "\n",
+    "We chose this dataset to explore how wars or conflicts affect regions. The dataset (Ukraine & the Black Sea ( 26 April 2024 )) holds important details such as region specifics, fatalities, population data, and event specifics related to conflicts. By analyzing these factors together, we aim to understand how conflicts impact the regions where they occur. \n",
+    "\n",
+    "- What was your goal for the end user's experience?\n",
+    "\n",
+    "The dataset had many columns filled with different variables. Our main goal was to explore the relationships between these variables and create a narrative about how conflicts affect regions. There were lots of things happening in the region. Our goal was to share as many insights as we could with the user.\n",
+    "\n",
+    "Through visuals, we wanted to show what's happening in different regions and how conflicts are causing changes. We aimed to understand how these factors are interconnected and illustrate the impact of conflicts. \n"
    ]
   },
   {
