--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Group 64:\n",
     "- **Lukas Rasocha** (s233498)\n",
-    "- **Md Jahidul Islam** (s240010)\n",
+    "- **NAME** (s174398)\n",
     "- **NAME** (s174394)"
    ]
   },
@@ -71,11 +71,9 @@
    "source": [
     "## 4. Genre. Which genre of data story did you use?\n",
     "- Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?\n",
-    "\n",
     "For our presentation, we opted for a magazine-style genre to present our data story effectively. To enhance the narrative with visual narrative, we explored various formats, ultimately finding the Progress bar/Time bar to be most suitable for visual structuring.\n",
     "\n",
     "In our plots, we integrated zooming functionality to allow for detailed views of specific regions. This improvement allows viewers to examine the data closely, regardless of its scale or level of detail. Animated transition is also used to show the change over time. As there was some data related to years, the animated transition was very much effective in showing change over time.\n",
-    "\n",
     "\n",
     "- Which tools did you use from each of the 3 categories of Narrative Structure (Figure 7 in Segal and Heer). Why?"
    ]
@@ -928,8 +926,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bar chart and scatter plot\n",
+    "\n",
+    "To start off the data story, we wanted to show the distribution of the number of events in the dataset. Both to give an idea of what type of events the dataset contains and to show which events show up the most often. Further we overlayed the number of fatalities on top of the bar chart as a scatter plot to show the relationship between the number of events and the number of fatalities. Each scatter point is also proportionally sized to the total number of fatalities, to make it easier to see the most violent events."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1482,6 +1489,9 @@
            "#000010"
           ]
          }
+        },
+        "title": {
+         "text": "Impact of Different Conflict Events"
         },
         "xaxis": {
          "title": {
