--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Group 64:\n",
     "- **Lukas Rasocha** (s233498)\n",
-    "- **NAME** (s174398)\n",
+    "- **Md Jahidul Islam** (s240010)\n",
     "- **NAME** (s174394)"
    ]
   },
@@ -71,6 +71,8 @@
    "source": [
     "## 4. Genre. Which genre of data story did you use?\n",
     "- Which tools did you use from each of the 3 categories of Visual Narrative (Figure 7 in Segal and Heer). Why?\n",
+    "\n",
+    "\n",
     "For our presentation, we opted for a magazine-style genre to present our data story effectively. To enhance the narrative with visual narrative, we explored various formats, ultimately finding the Progress bar/Time bar to be most suitable for visual structuring.\n",
     "\n",
     "In our plots, we integrated zooming functionality to allow for detailed views of specific regions. This improvement allows viewers to examine the data closely, regardless of its scale or level of detail. Animated transition is also used to show the change over time. As there was some data related to years, the animated transition was very much effective in showing change over time.\n",
