small update on main and final project

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -10,7 +10,7 @@
     "### Group 64:\n",
     "- **Lukas Rasocha** (s233498)\n",
     "- **Md Jahidul Islam** (s240010)\n",
-    "- **NAME** (s174394)"
+    "- **Ting-Hui Cheng** (s232855)"
    ]
   },
   {
@@ -50,9 +50,7 @@
    "metadata": {},
    "source": [
     "## 2. Basic stats. Let's understand the dataset better\n",
-    "- Write about your choices in data cleaning and preprocessing\n",
-    "\n",
-    "We have several files for this data analysis and visualization project, with our primary focus on data.csv. Since there are no outliers in the years, duplicate events, or missing data for the attributes we intend to analyze further (such as Latitude, Event Type, Fatalities, Actor, and etc.), we will not perform any cleaning on these aspects\n"
+    "### Libraries "
    ]
   },
   {
@@ -69,6 +67,15 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from math import radians, cos, sin, asin, sqrt, log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Write about your choices in data cleaning and preprocessing\n",
+    "\n",
+    "We have several files for this data analysis and visualization project, with our primary focus on data.csv. Since there are no outliers in the years, duplicate events, or missing data for the attributes we intend to analyze further (such as Latitude, Event Type, Fatalities, Actor, and etc.), we will not perform any cleaning on these aspects\n"
    ]
   },
   {
