added JI in text contribution

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -981,7 +981,7 @@
     "\n",
     "Visualisation 10 - LR\n",
     "\n",
-    "Text - TC (Major contribution), LR\n",
+    "Text - TC (Major contribution), LR, JI\n",
     "\n",
     "\n",
     "\n"
