--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src="./assets/blacksearegion.jpeg" alt=\"drawing\" width=\"850\"/></center>"
+    "<center><img src=\"./assets/blacksearegion.jpeg\" alt=\"drawing\" width=\"850\"/></center>"
    ]
   },
   {
