--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -929,22 +929,24 @@
     "## 6. Discussion. Think critically about your creation\n",
     "#### What went well?\n",
     "\n",
-    "We believe that our data story successfully conveys the human cost of conflict in Ukraine and the Black Sea region, providing a descriptive overview of the impact of violence on civilians. The visualizations are engaging and informative, utilizing several tools described by Segal and Heer in their *Narrative Visualization: Telling Stories with Data* paper. They offer users interactive tools to explore the data and gain insights into the dynamics of the conflicts. The narrative structure guides users through the story, providing context and background information to help them understand the significance of the events and their implications for the region. Furthermore, we think that the visualizations are well-designed and effectively communicate the key findings of the analysis, making the data story accessible and engaging for a general audience.\n",
+    "We believe that our data story successfully conveys the human cost of conflict in Ukraine and the Black Sea region, providing a descriptive overview of the impact of violence on civilians. The visualizations are engaging and informative, utilizing several tools described by Segal and Heer in their *Narrative Visualization: Telling Stories with Data* paper. They offer interactive tools to explore the data and gain insights into the dynamics of the conflicts. \n",
     "\n",
-    "We also believe that our design choices, particularly in the use of color and layout, effectively conveyed the seriousness of the subject matter. The spiral plots, for instance, provided a nice visual representation of the cumulative human cost of the conflict, aiming at an emotional response from the audience.\n",
+    "The narrative structure guides users through the story, providing context and background information to help them understand the significance of the events and their implications for the region. Furthermore, we think that the visualizations are well-designed and effectively communicate the key findings of the analysis, making the data story accessible and engaging for a general audience.\n",
     "\n",
-    "The richness of the dataset also enabled us to employ variety in our visualizations, showcasing different aspects of the conflicts and their impact on civilians. From geographical distribution to network graph of actors involved, the visualizations cover a wide range of topics, providing a comprehensive view of the data.\n",
+    "When it comes to the design choices made, particularly in the use of color and layout, we think that they effectively convey the seriousness of the subject matter. The spiral plots, for instance, provided a nice visual representation of the cumulative human cost of the conflict, aiming at an emotional response from the audience.\n",
+    "\n",
+    "Lastly, the richness of the dataset also enabled us to employ variety in our visualizations, showcasing different aspects of the conflicts and their impact on civilians. From geographical distribution to network graph of actors involved, the visualizations cover a wide range of topics, providing a comprehensive view of the data.\n",
     "\n",
     "\n",
     "#### What is still missing? What could be improved?, Why?\n",
     "\n",
-    "While we believe that our data story effectively conveys the impact of conflict on civilians, there are still areas that could be improved or expanded upon. For instance, we could have included more detailed analysis of the relationships between actors involved in the conflicts, providing more context on the dynamics of the conflicts and the motivations behind them. Additionally adding some annotations to the visualizations (as described by Segal and Heer) could have provided more context and explanation for the data.\n",
+    "While we believe that our data story effectively conveys the impact of conflict on civilians, there are still areas that could be improved or expanded upon. For instance, we could have included more detailed analysis of the relationships between actors involved in the conflicts, providing more context on the dynamics of the conflicts and the motivations behind them. Additionally adding some annotations to the visualizations (as described by Segal and Heer) could have provided more better explanation for the data.\n",
     "\n",
-    "There is also a room for improvement in the individual graphs, for instance, the region map (plot 5) could have included some summative statistics for each region, such as the total number of events, fatalities, or population affected when the viewer hovers over a region. \n",
+    "There is also a room for improvement in the individual graphs, for instance, the region map (plot 5) could have included some summative statistics for each region, such as the total number of events, average fatalities, or population affected when the viewer hovers over a region. \n",
     "\n",
-    "Applying some more complicated analytical methods such as clustering, or using natural language processing on the accompanying `NOTES` of the events could have also led to more interesting insights that are not immediately clear from the data.\n",
+    "Also, applying some more complicated analytical methods such as clustering, or using natural language processing on the accompanying `NOTES` of the events could have led to other interesting insights that are not immediately clear from the data.\n",
     "\n",
-    "Lastly, even though our dataset was rich in information, we could have included more demographic data or information on the economic impact of the conflicts or a refugee dataset to provide a more comprehensive view of the situation. This would have helped to paint a more complete picture of how humans are affected by such conflicts rather by \"deaths\" alone. "
+    "Lastly, even though our dataset was rich in information, we could have included more demographic data or information on the economic impact of the conflicts or looked into data that contains information about refugees. This would help to paint a more complete picture of how humans are affected by such conflicts rather by \"deaths\" alone. "
    ]
   },
   {
