--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -44,9 +44,9 @@
     "\n",
     "#### What was your goal for the end user's experience?\n",
     "\n",
-    "The primary goals for the end user's experience were designed to be informative, engaging, and easy to grasp. We wanted to provide an overview of the impact of conflicts in Ukraine and the Black Sea region, including the actors involved, the types of events, and the number of fatalities, while making sure the information is available and understandable to general audience. To achieve these goals, we focused on creating interactive visualizations that allow users to explore the data themselves and gain insights into the dynamics of the conflicts. \n",
+    "The primary goals for the end user's experience were designed to be informative, engaging, and easy to grasp. We wanted to a clear picture of the impact of conflicts in Ukraine and the Black Sea region, illustrating the relationships between various actors, the distribution of different types of events, and the toll in terms of fatalities, all in a way that's accessible to everyone.\n",
     "\n",
-    "However, we also aimed to provide context and background information to help users understand the significance of the events and and their implications for the region. This was done by framing our data story into a magasine-like website, where the user can easily follow the story in a linear like manner.\n",
+    "To achieve this, our focus centered on crafting interactive visualizations that allow users to explore the data themselves and gain insights into the dynamics of the conflicts. We also aimed to provide context and background information to help users understand the significance of the events and and their implications for the region. This was done by framing our data story into a magasine-like website, where the user can easily follow the story in a linear like manner.\n",
     "\n",
     "Another goal was to create an emotional impact. Through telling the stories of fatalities and the mapping of events close to populated areas, we aimed to convey the human cost of the conflicts, creating a deeper emotional connection and empathy among the audience towards the affected populations."
    ]
@@ -93,7 +93,7 @@
    "source": [
     "#### Write about your choices in data cleaning and preprocessing\n",
     "\n",
-    "We have several files for this data analysis and visualization project, with our primary focus on data.csv. Since there are no outliers in the years, duplicate events, or missing data for the attributes we intend to analyze further (such as Latitude, Event Type, Fatalities, Actor, and etc.), we will not perform any cleaning on these aspects\n"
+    "For our data analysis and visualization project, our main focus lies on the data contained within data.csv. After thorough examination, we find that there are no outliers within the temporal data, no instances of duplicated events, and no missing entries for key attributes crucial for our analysis, such as Latitude, Event Type, Fatalities, and Actor. Consequently, there is no need for us to undertake any cleaning procedures in relation to these aspects of the dataset.\n"
    ]
   },
   {
@@ -144,12 +144,13 @@
     "def data_preprocessing(data):\n",
     "    # Convert event date to datetime format\n",
     "    data['EVENT_DATE'] = pd.to_datetime(data['EVENT_DATE'])\n",
-    "    # Convert lat, lon to correct delimiter \n",
+    "    # ...\n",
+    "    # ...\n",
+    "    # Convert lat, lon to correct delimiter\n",
     "    data['LATITUDE'] = pd.to_numeric(data['LATITUDE'].str.replace(',', '.'), errors='coerce')\n",
     "    data['LONGITUDE'] = pd.to_numeric(data['LONGITUDE'].str.replace(',', '.'), errors='coerce')\n",
-    "    \n",
-    "    return data\n",
-    "data = data_preprocessing(data)"
+    "\n",
+    "    return data"
    ]
   },
   {
@@ -158,7 +159,7 @@
    "source": [
     "#### Write a short section that discusses the dataset stats, containing key points/plots from your exploratory data analysis.\n",
     "\n",
-    "In our dataset, there are 151,159 rows and 35 attributes. The tables below display the summary statistics of key attributes crucial for our analysis."
+    "The tables below display the summary statistics of key attributes crucial for our analysis:"
    ]
   },
   {
@@ -270,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The earliest year recorded is 2018, and the latest is 2024. Geographically, the events span latitudes from 41.162 to 52.341 and longitudes from 22.163 to 40.132. While most recorded events had zero fatalities, underscoring a general trend of non-lethal outcomes, there were still some incidents with high fatalities, reaching a maximum of 600. This stark contrast underscores the potential severity of such events."
+    "The data covers events from as early as 2018 to as recent as 2024, spanning latitudes from 41.162 to 52.341 and longitudes from 22.163 to 40.132. Although many recorded events resulted in no fatalities, with an average of 0.46, there were still some instances of significant loss, with the highest reaching 600 fatalities. Such a wide disparity in fatalities indeed underscores the potential severity of these events."
    ]
   },
   {
