--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -351,9 +351,11 @@
     "## 3. Data Analysis\n",
     "\n",
     "#### Describe your data analysis and explain what you've learned about the dataset.\n",
+    "> It's crucial to note that the dataset only encompasses data up to March 2024. This limitation is significant when interpreting plots and visualizations over time, as the amount of data differs only in the year 2024.\n",
+    "\n",
     "1. Examining the trend of fatalities over time.\n",
     "\n",
-    "The calendar plot of fatalities from 2018 to 2024 provides a visual summary of fatality occurrences over time, with each row representing a year and columns delineating months. While there are no evident consistent seasonal trends across the years, isolated months in certain years such as May and July show peaks in fatalities. High-fatality days do not follow a clear pattern related to specific days of the week, suggesting randomness in the occurrence of these events. The plot also reveals periods, notably in 2024, with few to no fatalities, indicating times of relative calm. "
+    "The calendar plot of fatalities from 2018 to 2024 provides a visual summary of fatality occurrences over time, with each row representing a year and columns marking the months. There aren't consistent seasonal patterns observed across the years, nor is there a clear pattern regarding specific days of the week for high-fatality days, suggesting randomness in their occurrence. However, while seasonal trends aren't apparent, certain months in particular years, like March and November in 2022, show peaks in fatalities. Additionally, an interesting observation is that there is no data on fatalities before the end of February 2022. After that, there is a sharp increase, and this trend persists until the data ends."
    ]
   },
   {
@@ -392,7 +394,7 @@
    "source": [
     "2. Investigating the trend of event types over time.\n",
     "\n",
-    "The bar chart illustrating the distribution of event types from 2018 to 2024 reveals notable fluctuations in conflict-related activities. Notably, there is a sharp increase in explosions/remote violence, peaking in 2022 (It's important to note that the dataset only includes data up to March 2024, indicating ongoing conflict). Battles, which were previously the most common event type, experienced a slight decrease during 2020 and 2021 but rose again thereafter. The overall increase in events after 2022 suggests a growing intensity in conflict or significant escalations."
+    "The bar chart illustrating the distribution of event types from 2018 to 2024 reveals notable fluctuations in conflict-related activities. Notably, there is a sharp increase in explosions/remote violence, peaking in 2022. Battles, which were previously the most common event type, experienced a slight decrease during 2020 and 2021 but rose again thereafter. The overall increase in events after 2022 suggests a growing intensity in conflict or significant escalations."
    ]
   },
   {
