--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "#### What was your goal for the end user's experience?\n",
     "\n",
-    "The primary goals for the end user's experience were designed to be informative, engaging, and easy to grasp. We wanted to a clear picture of the impact of conflicts in Ukraine and the Black Sea region, illustrating the relationships between various actors, the distribution of different types of events, and the toll in terms of fatalities, all in a way that's accessible to everyone.\n",
+    "The primary goals for the end user's experience were designed to be informative, engaging, and easy to grasp. We wanted to show a clear picture of the impact of conflicts in Ukraine and the Black Sea region, illustrating the relationships between various actors, the distribution of different types of events, and the toll in terms of fatalities, all in a way that's accessible to everyone.\n",
     "\n",
     "To achieve this, our focus centered on crafting interactive visualizations that allow users to explore the data themselves and gain insights into the dynamics of the conflicts. We also aimed to provide context and background information to help users understand the significance of the events and and their implications for the region. This was done by framing our data story into a magasine-like website, where the user can easily follow the story in a linear like manner.\n",
     "\n",
