--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -708,7 +708,7 @@
     "\n",
     "To tell our story, we chose a magazine-style genre to present our data story effectively. To enhance the narrative with visual features, we explored various tools from the three categories of Visual Narative, these are:\n",
     "\n",
-    "**Consistent Visual Platform**: We maintained a consistent visual platform throughout our visualizations, ensuring that the design language and layout remained uniform. This consistency helps in maintaining a seamless narrative flow and making the interface intuitive for users, where the user just needs to familiarize themselves with the design once to navigate through the visualizations easily.\n",
+    "**Consistent Visual Platform**: We aimed to stay consistent within our visualizations, ensuring that the design language and layout remained uniform. This consistency helps in maintaining a seamless narrative flow and making the interface intuitive for users, where the user just needs to familiarize themselves with the design once to navigate through the visualizations easily.\n",
     "\n",
     "**Progress Bar / Timebar**: We used the Progress Bar / Timebar tool in our animated maps to help users understand the progression of data over time, giving them control over what exactly they want to see. This tool is particularly useful for visualizing temporal data and showing the change over time, allowing users to explore the data at their own pace.\n",
     "\n",
