--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -708,7 +708,7 @@
     "\n",
     "To tell our story, we chose a magazine-style genre to present our data story effectively. To enhance the narrative with visual features, we explored various tools from the three categories of Visual Narative, these are:\n",
     "\n",
-    "**Consistent Visual Platform**: We aimed to stay consistent within our visualizations, ensuring that the design language and layout remained uniform. This consistency helps in maintaining a seamless narrative flow and making the interface intuitive for users, where the user just needs to familiarize themselves with the design once to navigate through the visualizations easily.\n",
+    "**Consistent Visual Platform**: We aimed to stay consistent within our visualizations, ensuring that the design choices and layout remained uniform. This consistency helps in maintaining a seamless narrative flow and making the interface intuitive for users, where the user just needs to familiarize themselves with the design once to navigate through the visualizations easily.\n",
     "\n",
     "**Progress Bar / Timebar**: We used the Progress Bar / Timebar tool in our animated maps to help users understand the progression of data over time, giving them control over what exactly they want to see. This tool is particularly useful for visualizing temporal data and showing the change over time, allowing users to explore the data at their own pace.\n",
     "\n",
@@ -781,7 +781,7 @@
    "source": [
     "### 3) Undirected network graph\n",
     "\n",
-    "Our network graph visualization depicts the complex relationships between various actors involved in the conflicts, focusing on their roles in fatalities. By using an undirected graph format, we reveal the bidirectional nature of these relationships, which offers a clear overview of how interactions contribute to violence. The thickness of each connection illustrates the amount of fatalities between actors, with color coding at each node highlighting the total casualties initiated by an actor, thus enabling quick identification of the most aggressive entities. Please note that to ensure readability, we limited the display of only the actors based on casualty figures. In summary, it helps to identify most violent actors, and most violent conflicts between two actors.\n"
+    "Our network graph visualization depicts the complex relationships between various actors involved in the conflicts, focusing on their roles in fatalities. By using an undirected graph format, we reveal the bidirectional nature of these relationships, which offers a clear overview of how interactions contribute to violence. The thickness of each connection illustrates the amount of fatalities between actors, with color coding at each node highlighting the total casualties initiated by an actor, thus enabling quick identification of the most aggressive entities. Please note that to ensure readability, we decided to display only the most aggressive actors based on fatalities figures. In summary, it helps to identify most violent actors, and most violent conflicts between two actors.\n"
    ]
   },
   {
